<feat>: Add details for transactions code clean-up

--- a/App.xaml
+++ b/App.xaml
@@ -6,10 +6,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!--<ResourceDictionary Source="Resources/Styles/LightTheme.xaml" />
-                <ResourceDictionary Source="Resources/Styles/MainTheme.xaml" />-->
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/LightTheme.xaml" />
+                <ResourceDictionary Source="Resources/Styles/MainTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
