--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="Draftor.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:Draftor.Views.Main"
-    Shell.FlyoutBehavior="Disabled"
-    Title="Draftor">
+<Shell x:Class="Draftor.AppShell"
+       xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:views="clr-namespace:Draftor.Views.Main"
+       Shell.FlyoutBehavior="Disabled"
+     
+       Title="Draftor">
 
-    <TabBar x:Name="MainTabBar">
+    <TabBar x:Name="MainTabBar"
+            Route="HeadPage">
         <Tab Route="GroupsPage"
              Icon="{DynamicResource GroupsIcon}"
              Title="Groups">
@@ -27,5 +28,4 @@
                           Title="Settings" />
         </Tab>
     </TabBar>
-
 </Shell>
