--- a/Resources/Styles/DarkTheme.xaml
+++ b/Resources/Styles/DarkTheme.xaml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
+<?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="Draftor.Resources.Styles.DarkTheme">
@@ -10,7 +11,7 @@
     <Color x:Key="SecondaryTextColor">White</Color>
     <Color x:Key="TertiaryTextColor">WhiteSmoke</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
-    <Color x:Key="DisabledColor">#181b10</Color>
+    <Color x:Key="DisabledColor">#141414</Color>
     <Color x:Key="DisabledFontColor">#DADBDD</Color>
 
     <x:String x:Key="CalculatorIcon">Resources/drawable/calculatorDark.png</x:String>
