--- a/Views/Actions/PersonView.xaml
+++ b/Views/Actions/PersonView.xaml
@@ -6,143 +6,143 @@
              xmlns:viewModel="clr-namespace:Draftor.ViewModels"
              xmlns:converter="clr-namespace:Draftor.Converters"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:controls="clr-namespace:Draftor.Controls"
              x:Name="PersonPage"
              Title="{Binding WindowsTitle}"
              BackgroundColor="{DynamicResource PageBackgroundColor}"
-             x:DataType="context:PersonDataContext">
+             x:DataType="context:PersonDataContext"
+             Shell.TabBarIsVisible="False">
     <ContentPage.Resources>
         <converter:TotalToIntConverter x:Key="TotalToIntConverter" />
     </ContentPage.Resources>
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior EventName="Appearing"
-                                        Command="{Binding LoadTransactionsCommand}" />
+        <toolkit:EventToCommandBehavior EventName="NavigatedTo"
+                                        Command="{Binding LoadDataCommand}"/>
     </ContentPage.Behaviors>
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Frame BackgroundColor="{DynamicResource PrimaryColor}"
-                       Opacity="0.95"
-                       CornerRadius="25"
-                       HeightRequest="100"
-                       HorizontalOptions="FillAndExpand"
-                       VerticalOptions="FillAndExpand">
-                    <Label Text="{Binding Total}"
-                           FontSize="30"
-                           HorizontalTextAlignment="Center"
-                           VerticalTextAlignment="Center"
-                           HorizontalOptions="CenterAndExpand"
-                           FontAttributes="Bold"
-                           LineBreakMode="MiddleTruncation"
-                           SemanticProperties.Hint="{Binding Total}"
-                           VerticalOptions="CenterAndExpand">
-                        <Label.Triggers>
-                            <DataTrigger TargetType="Label"
-                                         Binding="{Binding Total, Converter={StaticResource TotalToIntConverter}}"
-                                         Value="1">
-                                <Setter Property="TextColor"
-                                        Value="LightGreen" />
-                            </DataTrigger>
-                            <DataTrigger TargetType="Label"
-                                         Binding="{Binding Total, Converter={StaticResource TotalToIntConverter}}"
-                                         Value="-1">
-                                <Setter Property="TextColor"
-                                        Value="Red" />
-                            </DataTrigger>
-                            <DataTrigger TargetType="Label"
-                                         Binding="{Binding Total, Converter={StaticResource TotalToIntConverter}}"
-                                         Value="0">
-                                <Setter Property="TextColor"
-                                        Value="DimGray" />
-                            </DataTrigger>
-                        </Label.Triggers>
-                    </Label>
-                </Frame>
-            </Grid>
+        <AbsoluteLayout>
+            <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
+                         AbsoluteLayout.LayoutFlags="All">
+                <Grid>
+                    <Frame BackgroundColor="{DynamicResource PrimaryColor}"
+                           Opacity="0.95"
+                           CornerRadius="25"
+                           HeightRequest="100"
+                           HorizontalOptions="FillAndExpand"
+                           VerticalOptions="FillAndExpand">
+                        <controls:BalanceLabel Value="{Binding Total}"
+                                               FontSize="30"
+                                               HorizontalTextAlignment="Center"
+                                               VerticalTextAlignment="Center"
+                                               HorizontalOptions="CenterAndExpand"
+                                               FontAttributes="Bold"
+                                               LineBreakMode="MiddleTruncation"
+                                               SemanticProperties.Hint="{Binding Total}"
+                                               VerticalOptions="CenterAndExpand" />
+                    </Frame>
+                </Grid>
 
-            <Label FontSize="Medium"
-                   Text="Name"
-                   Margin="5,0" />
-            <Entry HorizontalOptions="FillAndExpand"
-                   Placeholder="Person's name"
-                   Text="{Binding Name, Mode=TwoWay}" />
-            <Label FontSize="Medium"
-                   Text="Description"
-                   Margin="5,0" />
-            <Entry HorizontalOptions="FillAndExpand"
-                   Placeholder="Person's description, your notes"
-                   Text="{Binding Description, Mode=TwoWay}" />
-            <Label FontSize="Medium"
-                   Text="Transactions"
-                   IsVisible="{Binding IsEditting}"
-                   Margin="5,0" />
-            <ListView ItemsSource="{Binding Transactions}"
-                      IsRefreshing="{Binding AreTransactionsRefreshing}"                     
-                      HorizontalOptions="Fill"
-                      Margin="5,5"
-                      VerticalOptions="Start"
-                      IsVisible="{Binding IsEditting}">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="viewModel:TransactionListViewModel">
-                        <ViewCell>
-                            <SwipeView Margin="5">
-                                <SwipeView.Triggers>
-                                    <DataTrigger TargetType="SwipeView"
-                                                 Binding="{Binding ToRemove}"
-                                                 Value="True">
-                                        <Setter Property="IsEnabled"
-                                                Value="False" />
-                                    </DataTrigger>
-                                </SwipeView.Triggers>
+                <Label FontSize="Medium"
+                       Text="Name"
+                       Margin="5,0" />
+                <Entry HorizontalOptions="FillAndExpand"
+                       Placeholder="Person's name"
+                       Text="{Binding Name, Mode=TwoWay}" />
+                <Label FontSize="Medium"
+                       Text="Description"
+                       Margin="5,0" />
+                <Entry HorizontalOptions="FillAndExpand"
+                       Placeholder="Person's description, your notes"
+                       Text="{Binding Description, Mode=TwoWay}" />
+                <Label FontSize="Medium"
+                       Text="Transactions"
+                       IsVisible="{Binding IsEditting}"
+                       Margin="5,0" />
 
-                                <SwipeView.LeftItems>
-                                    <SwipeItem Text="Delete"
-                                               BackgroundColor="Red"
-                                               Command="{Binding BindingContext.DeleteTransactionCommand, Source={x:Reference PersonPage}}"
-                                               CommandParameter="{Binding Id}" />
-                                </SwipeView.LeftItems>
-                                <FlexLayout Direction="Row"
-                                            BackgroundColor="{DynamicResource PrimaryColor}"
-                                            AlignItems="Center"
-                                            JustifyContent="SpaceBetween"
-                                            Padding="5">
-                                    <Label Text="{Binding Title}"
-                                           FontSize="Medium" />
-                                    <Label Text="{Binding Value}"
-                                           FontSize="Medium">
-                                        <Label.Triggers>
-                                            <DataTrigger TargetType="Label"
-                                                         Binding="{Binding Value, Converter={StaticResource TotalToIntConverter}}"
-                                                         Value="1">
-                                                <Setter Property="TextColor"
-                                                        Value="LightGreen" />
-                                            </DataTrigger>
-                                            <DataTrigger TargetType="Label"
-                                                         Binding="{Binding Value, Converter={StaticResource TotalToIntConverter}}"
-                                                         Value="-1">
-                                                <Setter Property="TextColor"
-                                                        Value="Red" />
-                                            </DataTrigger>
-                                        </Label.Triggers>
-                                    </Label>
-                                    <FlexLayout.Triggers>
-                                        <DataTrigger TargetType="FlexLayout"
+                <ListView ItemsSource="{Binding Transactions}"
+                          HorizontalOptions="Fill"
+                          VerticalOptions="Fill"
+                          Margin="5,5"
+                          IsVisible="{Binding IsEditting}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="viewModel:TransactionForListVM">
+                            <ViewCell>
+                                <SwipeView Margin="5">
+                                    <SwipeView.Triggers>
+                                        <DataTrigger TargetType="SwipeView"
                                                      Binding="{Binding ToRemove}"
                                                      Value="True">
-                                            <Setter Property="Opacity"
-                                                    Value="0.2" />
+                                            <Setter Property="IsEnabled"
+                                                    Value="False" />
                                         </DataTrigger>
-                                    </FlexLayout.Triggers>
-                                </FlexLayout>
-                            </SwipeView>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <Button HorizontalOptions="End"
-                    Margin="5"
-                    Text="{Binding ActionButtonText}"
-                    VerticalOptions="Start"
-                    Command="{Binding AddCommand}" />
-        </StackLayout>
+                                    </SwipeView.Triggers>
+
+                                    <SwipeView.LeftItems>
+                                        <SwipeItem Text="Delete"
+                                                   BackgroundColor="Red"
+                                                   Command="{Binding BindingContext.DeleteTransactionCommand, Source={x:Reference PersonPage}}"
+                                                   CommandParameter="{Binding Id}" />
+                                    </SwipeView.LeftItems>
+                                    <SwipeView.RightItems>
+                                        <SwipeItem Text="Details"
+                                                   BackgroundColor="LightBlue"
+                                                   Command="{Binding BindingContext.DisplayTransactionCommand, Source={x:Reference PersonPage}}"
+                                                   CommandParameter="{Binding}" />
+                                    </SwipeView.RightItems>
+                                    <FlexLayout Direction="Row"
+                                                BackgroundColor="{DynamicResource PrimaryColor}"
+                                                AlignItems="Center"
+                                                JustifyContent="SpaceBetween"
+                                                Padding="5">
+                                        <Label Text="{Binding Title}"
+                                               Padding="5"
+                                               FontSize="Medium" />
+                                        <Label Text="{Binding Value}"
+                                               Padding="5"
+                                               FontSize="Medium">
+                                            <Label.Triggers>
+                                                <DataTrigger TargetType="Label"
+                                                             Binding="{Binding Value, Converter={StaticResource TotalToIntConverter}}"
+                                                             Value="1">
+                                                    <Setter Property="TextColor"
+                                                            Value="LightGreen" />
+                                                </DataTrigger>
+                                                <DataTrigger TargetType="Label"
+                                                             Binding="{Binding Value, Converter={StaticResource TotalToIntConverter}}"
+                                                             Value="-1">
+                                                    <Setter Property="TextColor"
+                                                            Value="Red" />
+                                                </DataTrigger>
+                                            </Label.Triggers>
+                                        </Label>
+                                        <FlexLayout.Triggers>
+                                            <DataTrigger TargetType="FlexLayout"
+                                                         Binding="{Binding ToRemove}"
+                                                         Value="True">
+                                                <Setter Property="Opacity"
+                                                        Value="0.2" />
+                                            </DataTrigger>
+                                        </FlexLayout.Triggers>
+                                    </FlexLayout>
+                                </SwipeView>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Button HorizontalOptions="End"
+                        Margin="5"
+                        Text="{Binding ActionButtonText}"
+                        VerticalOptions="Start"
+                        Command="{Binding AddCommand}" />
+            </StackLayout>
+
+            <ActivityIndicator AbsoluteLayout.LayoutBounds="0,0,1,1"
+                               AbsoluteLayout.LayoutFlags="All"
+                               IsVisible="{Binding IsDataBeingLoaded}"
+                               IsRunning="True"
+                               HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand" />
+
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
