--- a/Resources/Styles/DarkTheme.xaml
+++ b/Resources/Styles/DarkTheme.xaml
@@ -3,17 +3,15 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="Draftor.Resources.Styles.DarkTheme">
-    <Color x:Key="PageBackgroundColor">#121212</Color>
-    <Color x:Key="NavigationBarColor">#181b1e</Color>
-    <Color x:Key="PrimaryColor">#262b2f</Color>
-    <Color x:Key="SecondaryColor">White</Color>
+    <Color x:Key="PageBackgroundColor">#071E22</Color>
+    <Color x:Key="TopBarColor">#21457a</Color>
+    <Color x:Key="BottomBarColor">#26508e</Color>
+    <Color x:Key="PrimaryColor">#0081A7</Color>
+    <Color x:Key="SecondaryColor">#38A0B2</Color>
     <Color x:Key="PrimaryTextColor">White</Color>
-    <Color x:Key="SecondaryTextColor">White</Color>
-    <Color x:Key="TertiaryTextColor">WhiteSmoke</Color>
+    <Color x:Key="SecondaryTextColor">WhiteSmoke</Color>
+    <Color x:Key="TertiaryTextColor">Gray</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
     <Color x:Key="DisabledColor">#141414</Color>
-    <Color x:Key="DisabledFontColor">#DADBDD</Color>
-
-    <x:String x:Key="CalculatorIcon">Resources/drawable/calculatorDark.png</x:String>
-    <x:String x:Key="GroupsIcon">Resources/drawable/groupsDark.png</x:String>
+    <Color x:Key="DisabledTextColor">#DADBDD</Color>
 </ResourceDictionary>
