--- a/Resources/Styles/LightTheme.xaml
+++ b/Resources/Styles/LightTheme.xaml
@@ -3,17 +3,15 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="Draftor.Resources.Styles.LightTheme">
-    <Color x:Key="PageBackgroundColor">White</Color>
-    <Color x:Key="NavigationBarColor">#DCDCDC</Color>
-    <Color x:Key="PrimaryColor">WhiteSmoke</Color>
-    <Color x:Key="SecondaryColor">Black</Color>
+    <Color x:Key="PageBackgroundColor">#cdd2d2</Color>
+    <Color x:Key="TopBarColor">#21457a</Color>
+    <Color x:Key="BottomBarColor">#26508e</Color>
+    <Color x:Key="PrimaryColor">#0081A7</Color>
+    <Color x:Key="SecondaryColor">#4CA6C1</Color>
     <Color x:Key="PrimaryTextColor">Black</Color>
     <Color x:Key="SecondaryTextColor">Black</Color>
-    <Color x:Key="TertiaryTextColor">Gray</Color>
+    <Color x:Key="TertiaryTextColor">#333333</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
     <Color x:Key="DisabledColor">#C8C8C8</Color>
-    <Color x:Key="DisabledFontColor">#737577</Color>
-
-    <x:String x:Key="CalculatorIcon">Resources/drawable/calculatorLight.png</x:String>
-    <x:String x:Key="GroupsIcon">Resources/drawable/groupsLight.png</x:String>
+    <Color x:Key="DisabledTextColor">#737577</Color>
 </ResourceDictionary>
